--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,5 +28,4 @@
     <link rel="stylesheet" href="./styles/home.css" />
     <link rel="stylesheet" href="./styles/profile.css" />
   </head>
-</html>
-<body style="padding-bottom: 5rem"></body>
+<body style="padding-bottom: 5rem;">
