--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -66,7 +66,35 @@
 
           <div class="mb-3">
             <label for="password" class="form-label">Password</label>
-            <input type="password" class="form-control" id="password" />
+            <input
+              type="password"
+              class="form-control"
+              id="password"
+              name="password"
+            />
+          </div>          
+          
+          <div class="mb-3">
+            <label for="securityQuestion" class="form-label">Security Question</label>
+            <input
+              type="text"
+              class="form-control"
+              id="securityQuestion"
+              name="securityQuestion"
+            />
+            <div id="securityQuestionHelp" class="form-text">
+              Remember the answer to your security question in case you forget your password in the future.
+            </div>
+          </div>
+
+          <div class="mb-3">
+            <label for="securityAnswer" class="form-label">Answer</label>
+            <input
+              type="password"
+              class="form-control"
+              id="securityAnswer"
+              name="securityAnswer"
+            />
           </div>
 
           <div class="p-4 text-center">
