--- a/views/logout.ejs
+++ b/views/logout.ejs
@@ -34,9 +34,9 @@
           </div>
           <div class="pb-4">
             <button
-              type="button"
+              type="submit"
               class="btn btn-primary btn-lg"
-              onclick="window.location.href='/index'"
+              a href="/"
             >
               Home
             </button>
