--- a/views/logout.ejs
+++ b/views/logout.ejs
@@ -3,6 +3,7 @@
 
 <!-- content -->
 <body id="background">
+  <form action="/signout" method="post">
   <div class="container position-absolute top-50 start-50 translate-middle">
     <div class="card rounded-5 p-1" id="outerBox">
       <div class="card text-center p-4 rounded-5" id="innerBox">
@@ -36,8 +37,7 @@
             <button
               type="submit"
               class="btn btn-primary btn-lg"
-              a href="/"
-            >
+                > 
               Home
             </button>
           </div>
