--- a/views/logout.ejs
+++ b/views/logout.ejs
@@ -36,7 +36,7 @@
             <button
               type="button"
               class="btn btn-primary btn-lg"
-              onclick="window.location.href='/index'"
+              onclick="window.location.href='/'"
             >
               Home
             </button>
