--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -4,6 +4,7 @@
 <!-- content -->
 
 <!-- content -->
+
 <body id="background">
   <div class="container">
     <!-- top card -->
@@ -12,14 +13,7 @@
         <div class="row">
           <div class="col"></div>
           <div class="col">
-            <img
-              id="logo"
-              class="align-self-center"
-              src="./images/invsona.png"
-              alt="invsona logo"
-              width="200px"
-              height="200px"
-            />
+            <img id="logo" class="align-self-center" src="./images/invsona.png" alt="invsona logo" width="200px" height="200px" />
 
             <h1 id="title">Invsona</h1>
             <div class="container m-2 pb-5">
@@ -41,28 +35,12 @@
 
           <div class="mb-3">
             <label for="username" class="form-label">Username</label>
-<<<<<<< HEAD
-            <input type="username" class="form-control" id="username" name="username"/>
-=======
-            <input
-              type="username"
-              class="form-control"
-              id="username"
-              name="username"
-            />
->>>>>>> Fiona_Profile
+            <input type="username" class="form-control" id="username" name="username" />
           </div>
 
           <div class="mb-3">
             <label for="email" class="form-label">Email</label>
-            <input
-              type="email"
-              class="form-control"
-              id="email"
-              name="email"
-              aria-describedby="emailHelp"
-              name="email"
-            />
+            <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp" name="email" />
             <div id="emailHelp" class="form-text">
               We'll never share your email with anyone else.
             </div>
@@ -70,29 +48,12 @@
 
           <div class="mb-3">
             <label for="password" class="form-label">Password</label>
-            <input
-              type="password"
-              class="form-control"
-              id="password"
-              name="password"
-            />
+            <input type="password" class="form-control" id="password" name="password" />
           </div>
-            <input
-              type="password"
-              class="form-control"
-              id="password"
-              name="password"
-            />
-          </div>          
-          
+
           <div class="mb-3">
             <label for="securityQuestion" class="form-label">Security Question</label>
-            <input
-              type="text"
-              class="form-control"
-              id="securityQuestion"
-              name="securityQuestion"
-            />
+            <input type="text" class="form-control" id="securityQuestion" name="securityQuestion" />
             <div id="securityQuestionHelp" class="form-text">
               Remember the answer to your security question in case you forget your password in the future.
             </div>
@@ -100,19 +61,11 @@
 
           <div class="mb-3">
             <label for="securityAnswer" class="form-label">Answer</label>
-            <input
-              type="password"
-              class="form-control"
-              id="securityAnswer"
-              name="securityAnswer"
-            />
+            <input type="password" class="form-control" id="securityAnswer" name="securityAnswer" />
           </div>
 
           <div class="p-4 text-center">
-            <button
-              type="submit"
-              class="btn btn-primary btn-lg"
-            >
+            <button type="submit" class="btn btn-primary btn-lg">
               SIGNUP
             </button>
           </div>
