--- a/styles/index.css
+++ b/styles/index.css
@@ -1,13 +1,31 @@
 #background {
-  background-image: url('/images/purplebg.jpg');
-  background-repeat: no-repeat;
-  background-size: auto;
-  width: 100%;
-  height: 100%;
+  position:fixed;
+  right: 0;
+  bottom: 0;
+  min-width:100%;
+  min-height:100%;
+}
+
+#box{
+  width:fit-content;
+  height:fit-content;
+  text-align: center;
+  margin: 0 auto;
 }
 
 #logo{
+  width: 250px;
+  height: 250px;
   filter: drop-shadow(0px 0px 10px #ffffff);
+}
+
+#content{
+  position: absolute;
+  top:20%;
+  background: rgba(0, 0, 0, 0.60);
+  color: #f1f1f1;
+  width: 100%;
+  padding: 100px;
 }
 
 #innerBox {
@@ -33,7 +51,7 @@ button{
   color: white;
   width: 100%;
   font-family: "Gugi", sans-serif;
-  font-size: 8px;
+  font-size: 10px;
   overflow: hidden; /* content is hidden */
   border-right: 0.50em solid white; /* thickness of the cursor */
   white-space: nowrap; /* keeps everything in one line */
