--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,45 +2,27 @@
 <%-include ('./partials/header.ejs')%>
 
 <!-- Purpose: Landing page for Invsona -->
-<body id="background">
-  <div class="container position-absolute top-50 start-50 translate-middle">
-    <div class="card rounded-5 p-1" id="outerBox">
-      <div class="card text-center p-4 rounded-5" id="innerBox">
-        <div class="row">
-          <div class="col"></div>
-          <div class="col">
-            <img
-              id="logo"
-              class="align-self-center"
-              src="./images/invsona.png"
-              alt="invsona logo"
-              width="200px"
-              height="200px"
-            />
+<body>
 
-            <h1 id="title">Invsona</h1>
-            <div class="container m-2 pb-5">
-              <p class="wrap" id="slogan">
-                Character Creation at Your Finger Tips
-              </p>
-            </div>
+    <!-- video background -->
+    <video autoplay muted loop id="background">
+      <source src="./images/blue_bg.mp4" type="video/mp4" />
+    </video>
 
-            <div class="pb-4">
-              <button
-                type="button"
-                class="btn btn-primary btn-lg"
-                onclick="window.location.href='/login'"
-              >
-                Start
-              </button>
-            </div>
-          </div>
-          <div class="col"></div>
-        </div>
+    <!-- logo -->
+    <div class="container-fluid text-center align-self-center" id = "content">
+      <div id="box">
+        <img id="logo" src="./images/invsona.png" alt="invsona logo"/>
+        <h1 id="title">Invsona</h1>
+        <div class="mb-5">
+        <p id="slogan">Character Creation at Your Finger Tips</p></div>
+        <button class="btn btn-primary" onclick="window.location.href='/login'">START</button>
       </div>
     </div>
-  </div>
+    
 
-  <!-- footer -->
-  <%-include ('./partials/footer.ejs')%>
+
+
+    <!-- footer -->
+    <%-include ('./partials/footer.ejs')%>
 
